kube/services/netpolicy/sower_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-sower
spec:
  podSelector:
    matchLabels:
      app: sower
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: sower
      - podSelector:
          matchLabels:
             app: revproxy
      ports:
         - port: 80
         - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: sower
      - ipBlock:
           cidr: 54.224.0.0/12
      - ipBlock:
           cidr: 52.92.16.0/20
      - ipBlock:
           cidr: 0.0.0.0/0
  policyTypes:
   - Ingress
   - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-sowerjob
spec:
  spec:
  podSelector:
    matchLabels:
      app: sowerjob
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: sowerjob
      - ipBlock:
           cidr: 54.224.0.0/12
      - ipBlock:
           cidr: 52.92.16.0/20
      - ipBlock:
           cidr: 0.0.0.0/0
  policyTypes:
   - Ingress
   - Egress
